Add simplified port 5000 installation
- install-port-5000.sh: One-command installation script for port 5000
- Updated .env.example: Default to production mode and port 5000
- INSTALL-PORT-5000.md: Simple installation guide

Features:
- Clean, single-script deployment directly on port 5000
- No Nginx complexity - runs Express directly
- Automatic Node.js 20 LTS installation
- PM2 process management with auto-restart
- Production build configuration
- Firewall setup for port 5000
- Auto-start on server boot
- Comprehensive status checking and error handling

Usage:
git clone repo -> setup .env -> chmod +x install-port-5000.sh -> ./install-port-5000.sh

Result: NFL Analytics Dashboard running on http://server-ip:5000

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 # Environment Variables
 # Copy this file to .env and fill in your actual values
 
-# OpenAI API Key for game analysis
+# OpenAI API Key for game analysis (REQUIRED)
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Development environment
-NODE_ENV=development
+# Environment mode
+NODE_ENV=production
 
-# Server port
+# Server port (default 5000)
 PORT=5000
 
 # The Odds API Key (optional - has fallback mock data)
